commit_add_subtract

--- a/Basic JavaScript Projects/Project3_math_operators/index.html
+++ b/Basic JavaScript Projects/Project3_math_operators/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <p id="Math" onclick = "addition_Function()">Click Here</p>
+    <p id="Math" onclick = "subtraction_Function()">Click Here Too</p>
 </body>
 </html>
