--- a/Basic JavaScript Projects/Project3_math_operators/index.html
+++ b/Basic JavaScript Projects/Project3_math_operators/index.html
@@ -4,7 +4,9 @@
     <script src="JS/main.js"></script>
 </head>
 <body>
-    <p id="Math" onclick = "addition_Function()">Click Here</p>
-    <p id="Math" onclick = "subtraction_Function()">Click Here Too</p>
+    <p id="Math" onclick = "addition_Function()">Click Here addition</p>
+    <p id="Math2" onclick = "subtraction_Function()">Click Here For subtraction</p>
+    <p id="Math3" onclick= "multiplication()">Click Here For multiplication</p>
+    <p id="Math4" onclick= "division()">Click Here For division</p>
 </body>
 </html>
