--- a/Basic JavaScript Projects/Project3_math_operators/index.html
+++ b/Basic JavaScript Projects/Project3_math_operators/index.html
@@ -8,5 +8,6 @@
     <p id="Math2" onclick = "subtraction_Function()">Click Here For subtraction</p>
     <p id="Math3" onclick= "multiplication()">Click Here For multiplication</p>
     <p id="Math4" onclick= "division()">Click Here For division</p>
+    <p id="Math5" onclick= "more_Math()">Click Here For multiple operators</p>
 </body>
 </html>
