--- a/Basic JavaScript Projects/Project3_math_operators/index.html
+++ b/Basic JavaScript Projects/Project3_math_operators/index.html
@@ -9,5 +9,9 @@
     <p id="Math3" onclick= "multiplication()">Click Here For multiplication</p>
     <p id="Math4" onclick= "division()">Click Here For division</p>
     <p id="Math5" onclick= "more_Math()">Click Here For multiple operators</p>
+    <p id="Math6" onclick= "modulus_Operator()">Click Here For modulus operator</p>
+    <p id="Math7" onclick= "negation_Operator()">Click Here For negation operator</p>
+    <p id="X" onclick= "increment_Operator()">Click Here For increment operator</p>
+    <p id="Y" onclick= "decrement_Operator()">Click Here For decrement operator</p>
 </body>
 </html>
