--- a/Basic JavaScript Projects/Project3_math_operators/index.html
+++ b/Basic JavaScript Projects/Project3_math_operators/index.html
@@ -13,6 +13,6 @@
     <p id="Math7" onclick= "negation_Operator()">Click Here For negation operator</p>
     <p id="X" onclick= "increment_Operator()">Click Here For increment operator</p>
     <p id="Y" onclick= "decrement_Operator()">Click Here For decrement operator</p>
-    <p id="demo" onclick= "round_Operator()">Click Here For rounding TODO fix this</p>
+    <p id="demo" onclick= "round_Operator()">Click Here For rounding</p>
 </body>
 </html>
