commit_js_step125

--- a/Basic JavaScript Projects/Project5_comparisons_type_coercion/index.html
+++ b/Basic JavaScript Projects/Project5_comparisons_type_coercion/index.html
@@ -7,5 +7,7 @@
     <p id="Test" onclick="my_Function()">Click here for NaN!</p>
     <p id="Test2" onclick="true_Function()">Click here true!</p>
     <p id="Test3" onclick="false_Function()">Click here for false!</p>
+    <p id="Not" onclick="not_Function()">Click here for true not!</p>
+    <p id="Not2" onclick="not2_Function()">Click here for false not!</p>
 </body>
 </html>
