--- a/Basic JavaScript Projects/Project6_ternary_operators_constructors/index.html
+++ b/Basic JavaScript Projects/Project6_ternary_operators_constructors/index.html
@@ -13,5 +13,10 @@
     <input id="Age" value="18" />
     <button onclick="Vote_Function()">Click here</button>
     <p id="Vote"></p>
+
+    <button onclick="myFunction()">Click here</button>   <!-- step 133 utilize the new keyword-->
+    <p id="New_and_This"></p>  
+
+    <p id="Nested_Function" onclick="count_Function()">Click here.</p>  <!-- step 138-->
 </body>
 </html>
