--- a/Basic JavaScript Projects/Project6_ternary_operators_constructors/index.html
+++ b/Basic JavaScript Projects/Project6_ternary_operators_constructors/index.html
@@ -17,6 +17,6 @@
     <button onclick="myFunction()">Click here</button>   <!-- step 133 utilize the new keyword-->
     <p id="New_and_This"></p>  
 
-    <p id="Nested_Function" onclick="count_Function()">Click here.</p>  <!-- step 138-->
+    <p id="Nested_Function" onclick="count_Function()">Click here.</p>  <!-- step 138 nested function-->
 </body>
 </html>
