--- a/Basic JavaScript Projects/Project7_scope_time_function/index.html
+++ b/Basic JavaScript Projects/Project7_scope_time_function/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <p id="Greeting" onclick="get_Date()">Click Here.</p>
     <script src="JS/main.js"></script>
 </head>
 <body>
