--- a/Basic JavaScript Projects/Project7_scope_time_function/index.html
+++ b/Basic JavaScript Projects/Project7_scope_time_function/index.html
@@ -2,9 +2,18 @@
 <html>
 <head>
     <p id="Greeting" onclick="get_Date()">Click Here.</p>
+    <p id="Greeting_2" onclick="get_Date_2()">Click Here for lights out.</p>
     <script src="JS/main.js"></script>
 </head>
 <body>
-    
+    <!-- Else example-->
+    <p>Write your age:</p> <!-- <p> element with user info-->
+    <input id="Age" value="" />
+    <p id="How_old_are_you?"></p>
+    <button onclick="Age_Function()">Click here</button>
+
+    <!-- Else if example-->
+    <p id="Time_of_day"></p>
+    <button onclick="Time_function()">Click here to get the time.</button>
 </body>
 </html>
