--- a/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
     <p>How many seconds would you like to set your alarm for?</p>
@@ -16,19 +16,19 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="img1.jpg" style="width:100%">
+            <img src="./Images/img1.jpg" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="img2.jpg" style="width:100%">
+            <img src="./Images/img2.jpg" style="width:100%">
             <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="img3.jpg" style="width:100%">
+            <img src="./Images/img3.jpg" style="width:100%">
             <div class="text">Caption Three</div>
         </div>
 
