--- a/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
@@ -8,7 +8,7 @@
     <input id="seconds" value="" />
     <button onclick="countdown()">Click here</button>
     <p id="timer"></p>
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" defer></script>
 
     <!-- Slideshow container -->
     <div class="slideshow-container">
