--- a/Basic JavaScript Projects/Async_assignment/index.html
+++ b/Basic JavaScript Projects/Async_assignment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-    <script src="main.js" async></script>
+    <script src="./JS/main.js" async></script>
     <p id="p1">Hello World</p>
     </body>
 </html>
