--- a/Basic JavaScript Projects/Project10_loops_arrays/index.html
+++ b/Basic JavaScript Projects/Project10_loops_arrays/index.html
@@ -7,5 +7,11 @@
 <body>
     <p id="Loop"></p>
     <button onclick="Call_Loop()">Click here to execute the loop.</button>
+
+    <p id="List_of_Instruments"></p>
+    <button onclick="for_Loop()">Click here.</button>
+
+    <p id="Array"></p>
+    <button onclick="array_Function()">Click here.</button>
 </body>
 </html>
