--- a/Basic JavaScript Projects/Project10_loops_arrays/index.html
+++ b/Basic JavaScript Projects/Project10_loops_arrays/index.html
@@ -13,5 +13,8 @@
 
     <p id="Array"></p>
     <button onclick="array_Function()">Click here.</button>
+
+    <p id="Constant"></p>
+    <button onclick="constant_function()">Click here!</button>
 </body>
 </html>
