--- a/Basic JavaScript Projects/Project10_loops_arrays/index.html
+++ b/Basic JavaScript Projects/Project10_loops_arrays/index.html
@@ -16,5 +16,17 @@
 
     <p id="Constant"></p>
     <button onclick="constant_function()">Click here!</button>
+
+    <p id="demo"></p>
+    <p>This example calls a function which returns the value of PI:</p>
+
+    <p id="Car_Object"></p>
+
+    <p id="demo2"></p>
+    <p>A loop with a <b>break</b> statement.</p>
+    
+    <p id="demo3"></p>
+    <p>A loop with a <b>continue</b> statement.</p>
+    <p>A loop which will skip the step where i = 3.</p>
 </body>
 </html>
