--- a/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
+++ b/Basic JavaScript Projects/JavaScript Projects/HTML_1.html
@@ -22,6 +22,8 @@
 <button onclick="Hello_World_Function()">Click me!</button>
 
 <canvas id="ID_Name" width="500" height="250"></canvas>
-<canvas id="ID_Name" width="500" height="250" style="border:5px solid black;">
+<canvas id="ID_Name" width="500" height="250" style="border:5px solid black;"></canvas>
 
-<canvas id="myCanvas" width="300" height="150" style="border:1px solid #d3d3d3;">
+<canvas id="myCanvas" width="300" height="150" style="border:1px solid #d3d3d3;"></canvas>
+
+<canvas id="myCanvas" width="300" height="150" style="border:1px solid #d3d3d3;"></canvas>
