--- a/Basic JavaScript Projects/TicTacToe/TicTacToe.html
+++ b/Basic JavaScript Projects/TicTacToe/TicTacToe.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="./css/game.css">
+    <script src="js/tictactoe.js" defer></script>
     <title>play Tic Tac Toe Online!</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
