--- a/Basic JavaScript Projects/JavaScript Projects/arrow.html
+++ b/Basic JavaScript Projects/JavaScript Projects/arrow.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<h2>JavaScript Arro Function</h2>
+<h2>JavaScript Arrow Function</h2>
 <p>This example shows the syntax of an Arrow Function, and how to use it.</p>
 <p id="demo"></p>
 
