--- a/Basic JavaScript Projects/JavaScript Projects/Pizza_Project/Pizza.html
+++ b/Basic JavaScript Projects/JavaScript Projects/Pizza_Project/Pizza.html
@@ -3,7 +3,7 @@
     <head>
         <title>Pizza Drill Demo</title>
         <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
-        <meta content="width=device-width,initial-scale=1.0" name="viewport">
+        <meta content="width=device-width,initial-scale=1.5" name="viewport">
         <script src="./Pizza_JavaScript/Pizza.js" defer></script>
         <link rel="stylesheet" type="text/css" href="Pizza_CSS/Pizza.css"/>
     </head>
@@ -19,6 +19,16 @@
                     <input class="size" type="radio" name="Size" value="Medium Pizza">Medium Pizza<br>
                     <input class="size" type="radio" name="Size" value="Large Pizza">Large Pizza<br>
                     <input class="size" type="radio" name="Size" value="Extra Large Pizza">Extra Large Pizza<br>
+                </div>
+
+
+                <div class="menu center">
+                    <h3>Vegetables:</h3>
+                    <input class="toppings" type="checkbox" name="Topping" value="Mushrooms">Mushrooms<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Onions">Onions<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Tomatoes">Tomatoes<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Olives">Olives<br>
+                    <input class="toppings" type="checkbox" name="Topping" value="Green Peppers">Green Peppers<br>
                 </div>
 
 
