--- a/Basic JavaScript Projects/JavaScript Projects/JavaScript/elements_example.html
+++ b/Basic JavaScript Projects/JavaScript Projects/JavaScript/elements_example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<p style="font-size: 2vw;"></p> <!-- set the font size using the vw unit -->
 <p>Click the button to change the background color of the document.</p>
 
 <button onclick="myFunction()">Try it</button>
